# ICRA-Simulation

./: CMakeLists.txt  Readme.md  Readme.txt  camera_demo.world  field_no_bounder_no_mesh.world  field_no_mesh.world  icra_with_mesh.world  installation.md  package.xml  stereo_demo.world
blender/: ICRA_field.dae  icra_field_texture.blend  icra_field_urdf.blend  icra_mesh.blend
examples/: CMakeLists.txt
examples/get_model_state/: CMakeLists.txt
launch/: icra_robot.launch  image_view.launch  spawn_all.launch
meshes/dae/: A1.dae  A2.dae  A3.dae  A4.dae  A5.dae  A6.dae  B1.dae  B2.dae  Cube.003.dae  Cube.004.dae  Cube.005.dae  Cube.006.dae  Cube.007.dae  Cube.008.dae  Cube.009.dae  Cube.011.dae  Cube.012.dae  Cube.028.dae  Cube.029.dae  Cube.030.dae  Cube.dae  W1.dae  W2.dae  W3.dae  W4.dae  center.dae  turret_yaw.dae
robot/urdf/: icra_robot.launch  icra_robot.urdf  icra_robot_control.yaml
src/get_model_state/: CMakeLists.txt  get_model_state.cpp  package.xml
urdf/: field_no_bounder_no_mesh.urdf  field_no_mesh.urdf  field_with_mesh.urdf  icra_robot.urdf  target_robot.urdf
